# pymultigit

./: .gitignore  .myenv  Makefile  Makefile.sphinx  README.md  README.rst  TODO.txt  conf.py  index.rst  pyproject.toml  python_modules_needed_for_dev.txt  requirements.thawed.txt  requirements.txt  setup.cfg  setup.py
config/: deps.py  project.py  python.py  version.py
doc/: DESIGN.txt  DONE.txt  Makefile  TODO.txt  ai_description.txt
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pymultigit.html  pymultigit.utils.html  search.html  searchindex.js
pymultigit/: configs.py  core.py  main.py  mg.py  static.py  version.py
scripts/: generate_man.sh  install_current.sh  install_from_pypi.py  install_from_pypi.sh  mg_all_actions.sh  mg_all_commit.sh  mg_all_create_lock.sh  mg_all_demo.sh  mg_all_install.sh  mg_all_pydmt_build.sh  mg_all_upgrade_deps.sh  mg_all_upgrade_deps_single.sh  mg_branch_not_master.sh  mg_check_collision.py  mg_check_lint.sh  mg_check_same_files.sh  mg_create_lock_file.sh  mg_create_single_lock_file.sh  mg_find_bad_pytconf_use.sh  mg_find_click.sh  mg_find_ide_files.sh  mg_find_make_helper.sh  mg_find_no_license.sh  mg_find_no_manifest.sh  mg_find_no_todo.sh  mg_find_redundant_sphinx.sh  mg_find_suggest_config.sh  mg_grep_noinspection.sh  mg_install_all.sh  mg_upgrade_package.sh  mg_upgrade_requirements.sh  open_browser.py  open_browser.sh  register.py  sphinx.sh  upload.py  xxx_check_same_files  xxx_find_bad_pytconf_use  xxx_find_click  xxx_find_make_helper  (+10 more)
sphinx/: pymultigit.rst  pymultigit.utils.rst
sphinx.moved/: modules.rst  pymultigit.rst
src/: mg_branch_not_master.sh  mg_check_same_files.sh  mg_dont_have_flow_template.sh  mg_find_ide_files.sh  mg_find_make_helper.sh  mg_find_no_config.sh  mg_find_no_htmlcov.sh  mg_find_no_manifest.sh  mg_find_no_templates.sh  mg_find_no_tests.sh  mg_find_no_todo.sh  mg_find_redundant_sphinx.sh  (+5 more)
(+28 files in other folders)
