[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymultigit"
version = "0.0.94"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pymultigit helps you deal with multiple git repositories"
readme = "README.md"
license = "MIT"
keywords=[
    "git",
    "python",
    "repositories",
    "multiple",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "gitpython",
    "pyfakeuse",
    "pytconf",
    "pylogconf",
    "venv-run",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pymultigit"
"Bug Tracker" = "https://github.com/veltzer/pymultigit/issues"
"Documentation" = "https://veltzer.github.io/pymultigit"
"Download" = "https://pypi.org/project/pymultigit/"
"Repository" = "https://github.com/veltzer/pymultigit"

[project.scripts]
pymultigit = "pymultigit.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymultigit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pymultigit/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
